another fix with broken session link
